# PCNtoolkit

./: .gitignore  .readthedocs.yaml  CHANGES  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PCNtoolkit.drawio  README.md  REFERENCES.md  bayesreg.py  citation.cff.in  how_to_install.txt  normative.py  pyproject.toml  pyproject.toml.bak  pytest.ini  render_citation.py  requirements.txt  setup.cfg  setup.py  test  test2  trendsurf.py
.github/workflows/: ci.yml  generate_citation.yml
conda_recipe/: meta.yaml
doc/: Makefile  api.rst  citing.rst  conf.py  contributors.rst  convert_notebooks.py  docker.rst  faq.rst  links.rst  outputs.rst  requirements.txt  singularity.rst  usage.rst
doc/autoapi/: index.rst
doc/pages/: background.rst  citing.rst
doc/source/: conf.py  index.rst  modindex.rst
docker/: Dockerfile  entrypoint.sh
docs/: api.rst  conf.py  contributing.rst  index.rst
docs/pages/: FAQs.rst  acknowledgements.rst  citing.rst  contributing.rst  descriptor.rst  glossary.rst  installation.rst  pcntoolkit_background.rst  quickstart.rst  references.rst  scripts.rst  tutorial_ROIcorticalthickness.rst  updates.rst
docs/source/: conf.py  index.rst
example_notebooks/: blr_example.ipynb  cartesian_product.ipynb  cli_example.ipynb  hbr_beta_example.ipynb  hbr_example.ipynb  hbr_param2_extend.ipynb  hbr_param2_test.ipynb  hbr_param2_transfer.ipynb  load_runner.py  multiprocess_problem_recreation.ipynb  runner_example.ipynb  runner_example.py  runner_sandbox.ipynb  runner_sandbox.py  runner_snadbox.py  test.ipynb  test_basis_function.ipynb  test_dill.ipynb  test_mutivar_fit.ipynb  test_runner.ipynb  test_runner.py
examples/: 00_getting_started.ipynb  01_loading_data.ipynb  01_normative_modelling.ipynb  02_BLR.ipynb  02_cluster_jobs.ipynb  03_HBR.ipynb  03_HBR_Normal.ipynb  03_HBR_bak.ipynb  03_command_line_interface.ipynb  04_HBR_SHASH.ipynb  04_cluster.ipynb  05_HBR_Beta.ipynb  05_command_line_interface.ipynb  06_cluster.ipynb  06_transfer_extend.ipynb  07_model_comparison.ipynb  08_cluster.ipynb  08_command_line_interface.ipynb  09_command_line_interface.ipynb  09_model_comparison.ipynb  10_merge.ipynb  11_composite_basis_function.ipynb  big_cluster_jobs.py  blr_example.ipynb  cluster.ipynb  cluster.py  command_line_interface.ipynb  getting_started.rst  hbr_example.ipynb  nifti.ipynb  normative_modelling.ipynb  sandbox.ipynb
issue_replication/: 140.py
nispat/: NP.py  NPR.py  __init__.py  architecture.py  bayesreg.py  fileio.py  gp.py  hbr.py  hlr.py  normative.py  normative_NP.py  normative_analyse.py  normative_parallel.py  normative_visualise.py  rfa.py  trendsurf.py  utils.py
nispat/normative_model/: __init__.py  norm_base.py  norm_blr.py  norm_gpr.py  norm_hbr.py  norm_hlr.py  norm_np.py  norm_rfa.py  norm_utils.py
notebooks/: pcntk_colab_dev_env.ipynb  pcntk_colab_env.ipynb
pcntoolkit/: NP_configs.pkl  README.md  __init__.py  bayesreg.py  configs.py  fileio.py  gp.py  hbr.py  main.py  normative.py  normative_NP.py  normative_model.py  normative_parallel.py  random.py  rfa.py  runner.py  temp.py  thrivelines.ipynb  thrivelines.py  trendsurf.py  utils.py
pcntoolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pcntoolkit/dataio/: __init__.py  basis_expansions.py  data_factory.py  fileio.py  fileio.py.bak  norm_data.py  scaler.py
pcntoolkit/math/: basis_function.py  shash.py
pcntoolkit/math_functions/: basis_function.py  factorize.py  likelihood.py  prior.py  scaler.py  shash.py  thrive.py  warp.py
pcntoolkit/model/: KOp.py  KnuOp.py  NP.py  NPR.py  NPR1.py  NP_configs.pkl  SHASH.py  __init__.py  architecture.py  bayesreg.py  gp.py  hbr.py  hbr1.py  rfa.py
pcntoolkit/normative_model/: __init__.py  model_interfaces.py  norm_XXX.py  norm_base.py  norm_blr.py  norm_conf.py  norm_factory.py  norm_gpr.py  norm_hbr.py  norm_hbr1.py  norm_hbr_b.py  norm_np.py  norm_rfa.py  norm_utils.py
pcntoolkit/plotting/: plotter.py
pcntoolkit/regression_model/: blr.py  factory.py  hbr.py  reg_conf.py  regression_model.py  test_model.py
pcntoolkit/util/: autoscale_plot.py  basis_function.py  bspline.py  evaluator.py  hbr_utils.py  job_observer.py  load_and_execute.py  model_comparison.py  output.py  paths.py  plotter.py  preprocess.py  run_job.py  runner.py  scaler.py  utils.py
pytest/: test_sanity.py
pytest_tests/: test_normative.py  test_shash.py
pytest_tests/fixtures/: blr_model_fixtures.py  data.py  data_fixtures.py  hbr_model_fixtures.py  model.py  model_fixtures.py  norm_data_fixtures.py  path_fixtures.py  paths.py
pytest_tests/test_dataio/: test_normdata.py
pytest_tests/test_hbr/: test_hbr.py  test_hbr_conf.py  test_hbr_data.py  test_param.py  test_prior.py
pytest_tests/test_norm/: test_norm_base.py  test_norm_blr.py  test_norm_conf.py  test_norm_factory.py  test_norm_hbr.py
pytest_tests/test_util/: test_basis_functions.py
site/: 404.html  contributing.rst  index.html  objects.inv  quickstart.rst  requirements.txt
site/search/: search_index.json
test/: conftest.py  test_blr_data.py  test_cli.py  test_norm_factory.py  test_normative.py
test/fixtures/: blr_model_fixtures.py  data_fixtures.py  hbr_model_fixtures.py  norm_data_fixtures.py  path_fixtures.py  test_model_fixtures.py
test/resources/: cov.txt  resp.txt
test/test_cli/: __init__.py  test_basic_commands.py  test_error_handling.py
test/test_core/: __init__.py  test_data_io.py  test_norm_factory.py  test_normative_model.py  test_regression_models.py  test_utils.py
test/test_dataio/: test_normdata.py
test/test_math/: test_basis_functions.py  test_factorize.py  test_warp.py
test/test_norm/: test_norm_base.py  (+5 more)
tests/: gp_test.m  profile_trendsurf.py  profiletrendsurf.py  testHBR.py  testHBR_transfer.py  testHLR.py  test_HBR.ipynb  test_NP.py  test_ST_NP.py  test_blr.py  test_gpr.py  test_hbr_pymc.py  test_normative.py  test_normative_parallel.py  test_rand_feat.py  test_sanity.py  test_transfer_scalers.ipynb  testblr.py  testblrpoly.py  testgpr.m  testgpr.py  testnormative.py  testnormative_parallel.py  testrandfeat.py  testytest.py  unit_tests.py
(+540 files in other folders)
