[tool.poetry]
name = "pcntoolkit"
version = "1.0.0-alpha"
description = "Predictive Clinical Neuroscience Toolkit"
authors = ["Andre Marquand", "Stijn de Boer", "Seyed Mostafa Kia", "Thomas Wolfers", "Johanna Bayer", "Charlotte Fraza", "Saige Rutherford", "Pierre Berthet", "Maarten Mennes", "Hester Huijsdens", "Linden Parkes"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.4"
bspline = "^0.1.1"             
nibabel = "^5.3.1"              
pymc = "^5.19.1"              
scikit-learn = "^1.5.2"      
six = "^1.16.0"          
scipy = "^1.12"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
numba = "^0.60.0"
torch = ">=2.1.1"
nutpie = "^0.13.2"
joblib = "^1.4.2"
dill = "^0.3.9"
ipywidgets = "^8.1.5"
ipykernel = "^6.29.5"


[tool.poetry.group.dev.dependencies]
sphinx-tabs = "^3.4.7"
pytest = "^8.3.3"
black = "^24.10.0"
sphinx-rtd-theme = "^3.0.2"
ruff = "^0.8.6"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[requires-python]
python_version = ">=3.10,<3.13"

[tool.poetry.scripts]
normative = "pcntoolkit.normative:entrypoint"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".github",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

ignore = [
    "F403",
    "F405",
    "F841",
]

# Same as Black.
line-length = 130
indent-width = 4

# Assume Python 3.12
target-version = "py312"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"