[project]
name = "pcntoolkit"
version = "1.1.0"
description = "Predictive Clinical Neuroscience Toolkit"
readme = "README.md"
license = "GPL-3.0-only"


authors = [
    { name = "Andre Marquand" },
    { name = "Stijn de Boer" },
    { name = "Seyed Mostafa Kia" },
    { name = "Saige Rutherford" },
    { name = "Charlotte Fraza" },
    { name = "Barbora Rehák Bučková" },
    { name = "Pieter Barkema"},
    { name = "Thomas Wolfers" },
    { name = "Mariam Zabihi"},
    { name = "Richard Dinga"},
    { name = "Johanna Bayer" },
    { name = "Maarten Mennes" },
    { name = "Hester Huijsdens" },
    { name = "Linden Parkes" },
    { name = "Pierre Berthet" },
]

requires-python = ">=3.10,<3.13"

dependencies = [
    "nibabel>=5.3.1",
    "pymc>=5.19.1",
    "scikit-learn>=1.5.2",
    "six>=1.16.0",
    "scipy>=1.12",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "numba>=0.60.0",
    "nutpie>=0.13.2",
    "joblib>=1.4.2",
    "dill>=0.3.9",
    "ipywidgets>=8.1.5",
    "ipykernel>=6.29.5",
]

[project.optional-dependencies]
dev = [
    "toml",
    "sphinx-tabs>=3.4.7",
    "pytest>=8.3.3",
    "black>=24.10.0",
    "sphinx-rtd-theme>=3.0.2",
    "ruff>=0.8.6",
    "pytest-cov>=6.0.0",
]

[project.scripts]
normative = "pcntoolkit.normative:entrypoint"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".github", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv",
    ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist",
    "node_modules", "site-packages", "venv",
]
ignore = ["F403", "F405", "F841"]
line-length = 130
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

